--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,13 @@
+  
+# The following redirect is intended for use with most SPAs that handle
+# routing internally.
 [[redirects]]
-    from="/*"
-    to="/index.html"
-    status=200
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
-    for="/*"
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
     [headers.values]
-    Acces-Control-Allow-Origin="*"
+    Access-Control-Allow-Origin = "*"
